--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -15,5 +15,5 @@ body {
 .container_center_main {
     width: 80vw;
     margin: auto;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
